[gd_scene load_steps=2 format=3 uid="uid://brkirjpjghbim"]

[ext_resource type="Script" path="res://character_select/character_select.gd" id="1_xytwt"]

[node name="character_select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xytwt")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 670.0
offset_bottom = 160.0

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Character 1"

[node name="Button2" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Character 2"

[node name="Button3" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Character 3"

[node name="Button4" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Character 4"

[node name="Button5" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Character 5"

[node name="Button6" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Character 6"

[connection signal="button_up" from="HBoxContainer/Button" to="." method="_on_button_button_up"]
[connection signal="button_up" from="HBoxContainer/Button2" to="." method="_on_button_2_button_up"]
[connection signal="button_up" from="HBoxContainer/Button3" to="." method="_on_button_3_button_up"]
[connection signal="button_up" from="HBoxContainer/Button4" to="." method="_on_button_4_button_up"]
[connection signal="button_up" from="HBoxContainer/Button5" to="." method="_on_button_5_button_up"]
[connection signal="button_up" from="HBoxContainer/Button6" to="." method="_on_button_6_button_up"]
